hphp/test/quick/upper-bounds/prop-redefine.php.expectf
Catchable fatal error: Type-hint of 'Sub::x' must be upper-bounded by num (as in class Sup), not int in %s/prop-redefine.php on line 12
